@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2022 CloudNetService team & contributors
+ * Copyright 2019-2023 CloudNetService team & contributors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,13 +20,26 @@ import com.electronwill.nightconfig.core.Config;
 import com.electronwill.nightconfig.json.JsonFormat;
 import eu.cloudnetservice.ext.platforminject.api.data.ParsedPluginData;
 import eu.cloudnetservice.ext.platforminject.api.stereotype.Dependency;
-import eu.cloudnetservice.ext.platforminject.api.util.PluginUtil;
+import eu.cloudnetservice.ext.platforminject.processor.id.CharRange;
+import eu.cloudnetservice.ext.platforminject.processor.id.PluginIdGenerator;
 import eu.cloudnetservice.ext.platforminject.processor.infogen.NightConfigInfoGenerator;
 import eu.cloudnetservice.ext.platforminject.processor.util.ConfigUtil;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 import lombok.NonNull;
 
 final class FabricPluginInfoGenerator extends NightConfigInfoGenerator {
+
+  // https://fabricmc.net/wiki/documentation:fabric_mod_json#mandatory_fields
+  private static final PluginIdGenerator MOD_ID_GENERATOR = PluginIdGenerator.withBoundedLength(1, 63)
+    .registerRange(
+      0,
+      '_',
+      CharRange.range('_'),
+      CharRange.range('a', 'z'),
+      CharRange.range('A', 'Z'),
+      CharRange.range('0', '9'));
 
   public FabricPluginInfoGenerator() {
     super(JsonFormat.minimalInstance(), "fabric.mod.json");
@@ -39,11 +52,11 @@ final class FabricPluginInfoGenerator extends NightConfigInfoGenerator {
     @NonNull String platformMainClassName
   ) {
     // base data
-    target.add("id", pluginData.id());
     target.add("schemaVersion", 1);
     target.add("name", pluginData.name());
     target.add("environment", "server");
     target.add("version", pluginData.version());
+    target.add("id", MOD_ID_GENERATOR.convert(pluginData.name()));
 
     // add the main clas for the server
     var main = ConfigUtil.tap(this.configFormat, config -> config.add("server", List.of(platformMainClassName)));
@@ -68,21 +81,27 @@ final class FabricPluginInfoGenerator extends NightConfigInfoGenerator {
     // put in the dependencies (if any)
     var dependencies = pluginData.dependencies().stream()
       .filter(dependency -> !dependency.optional())
-      .map(dependency -> ConfigUtil.tap(this.configFormat, config -> {
-        var id = PluginUtil.convertNameToId(dependency.name());
-        config.add(id, dependency.version());
-      }))
-      .toList();
-    ConfigUtil.putIfValuesPresent(target, "depends", dependencies);
+      .map(dependency -> Map.entry(MOD_ID_GENERATOR.convert(dependency.name()), dependency.version()))
+      .collect(Collectors.collectingAndThen(
+        Collectors.toList(),
+        entries -> ConfigUtil.tap(this.configFormat, config -> {
+          for (var entry : entries) {
+            config.add(entry.getKey(), entry.getValue());
+          }
+        })));
+    target.add("depends", dependencies);
 
     // put in the soft dependencies (if any)
     var softDepends = pluginData.dependencies().stream()
       .filter(Dependency::optional)
-      .map(dependency -> ConfigUtil.tap(this.configFormat, config -> {
-        var id = PluginUtil.convertNameToId(dependency.name());
-        config.add(id, dependency.version());
-      }))
-      .toList();
-    ConfigUtil.putIfValuesPresent(target, "recommends", softDepends);
+      .map(dependency -> Map.entry(MOD_ID_GENERATOR.convert(dependency.name()), dependency.version()))
+      .collect(Collectors.collectingAndThen(
+        Collectors.toList(),
+        entries -> ConfigUtil.tap(this.configFormat, config -> {
+          for (var entry : entries) {
+            config.add(entry.getKey(), entry.getValue());
+          }
+        })));
+    target.add("recommends", softDepends);
   }
 }
